--- a/.travis.yml
+++ b/.travis.yml
@@ -69,4 +69,8 @@ script:
   - tools/travis/build_tools.sh || travis_terminate 1
   - tools/travis/build_dependencies.sh || travis_terminate 1
   - tools/travis/build_byond.sh
+  
+after_success:
+  if: branch = CHANGELOG
+    - echo "We are in CHANGELOG branch"
 
